Fixed Joomla menu z-index regression
As originally described https://civicrm.stackexchange.com/questions/26858/anyone-else-seeing-an-overlapping-admin-civi-menu-bug-with-joomla-3-8-13-and-civ

--- a/css/joomla.css
+++ b/css/joomla.css
@@ -296,6 +296,7 @@ br.clear {
 
 ul#civicrm-menu {
   position:relative;
+  z-index:1;
 }
 
 div#toolbar-box div.m {
